# tarot-deck-reader

./: pyproject.toml
src/tarot_deck_reader/: __init__.py  classifier.py  enums.py  exceptions.py  loader.py  models.py
tests/: test_loader.py
