[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarot-deck-reader"
version = "0.1.0"
description = "Data layer for tarot card reading system — loads deck definitions and card metadata"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/tarot_deck_reader"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
